--- a/project-details.html
+++ b/project-details.html
@@ -212,8 +212,8 @@
                 <ul class="side-menu-social">
                     <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="Youtube"><a href="#"><i class="fab fa-fab fa-google-plus"></i></a></li>
+                    <li class="LinkedIn"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="Youtube"><a href="#"><i class="fa-brands fa-youtube"></i></i></a></li>
                 </ul>
             </div>
         </div>
@@ -336,7 +336,7 @@
                                             <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="LinkedIn"><i class="fab fa-twitter"></i></a>
+                                            <a href="#" class="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                                         </li>
                                         <li>
                                             <a href="#" class="linkedin"><i class="fab fa-twitter-in"></i></a>
@@ -574,7 +574,7 @@
                                     <a href="#"><i class="fab fa-pinterest"></i></a>
                                 </li>
                                 <li class="LinkedIn">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                                 </li>
                                 <li class="instagram">
                                     <a href="#"><i class="fab fa-instagram"></i></a>
