--- a/service-details.html
+++ b/service-details.html
@@ -196,8 +196,8 @@
             <ul class="side-menu-social">
                 <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li class="Youtube"><a href="#"><i class="fab fa-fab fa-google-plus"></i></a></li>
+                <li class="LinkedIn"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="Youtube"><a href="#"><i class="fa-brands fa-youtube"></i></i></a></li>
             </ul>
         </div>
     </div>
@@ -483,7 +483,7 @@
                                         <a href="#"><i class="fab fa-pinterest"></i></a>
                                     </li>
                                     <li class="LinkedIn">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                     <li class="instagram">
                                         <a href="#"><i class="fab fa-instagram"></i></a>
