--- a/details/b2b_marketing.html
+++ b/details/b2b_marketing.html
@@ -30,7 +30,7 @@
         <div class="primary-header">
             <div class="primary-header-inner">
                 <div class="header-logo d-lg-block">
-                    <a href="index.html">
+                    <a href="/index.html">
                         <img class="logo-dark" src="../assets/img/logo/logo-2.png" alt="Logo">
                         <img class="logo-light" src="../assets/img/logo/logo-1.png" alt="Logo">
                     </a>
@@ -39,9 +39,9 @@
                     <div class="header-menu-wrap">
                         <div class="mobile-menu-items">
                             <ul>
-                                <li class=" mega-menu"> <a href="index.html">Home</a>
+                                <li class=" mega-menu"> <a href="/index.html">Home</a>
                                     <!-- <ul>
-                                            <li><a href="index.html">Web Design</a></li>
+                                            <li><a href="/index.html">Web Design</a></li>
                                             <li><a href="index-2.html">Creative Studio</a></li>
                                             <li><a href="index-3.html">Web Development</a></li>
                                             <li><a href="index-4.html">Modern Agency</a></li>
@@ -61,7 +61,7 @@
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="team.html">Team</a></li>
                                             <li><a href="team-details.html">Team Details</a></li>
-                                            <li><a href="project.html">Portfolio</a></li>
+                                            <li><a href="/project.html">Portfolio</a></li>
                                             <li><a href="project-details.html">Portfolio Details</a></li>
                                             <li><a href="pricing.html">Pricing Plans</a></li>
                                             <li><a href="faq.html">Faq</a></li>
@@ -69,9 +69,9 @@
                                         </ul> -->
                                 </li>
                                 <li class="">
-                                    <a href="service.html">Services</a>
+                                    <a href="/service.html">Services</a>
                                     <!-- <ul>
-                                            <li><a href="service.html">Service</a></li>
+                                            <li><a href="/service.html">Service</a></li>
                                             <li><a href="service-details.html">Service Details</a></li>
                                         </ul> -->
                                 </li>
@@ -86,14 +86,14 @@
                                         </ul>
                                     </li> -->
                                 <li class="">
-                                    <a href="project.html">Projects</a>
+                                    <a href="/project.html">Projects</a>
                                     <!-- <ul>
                                             <li><a href="blog-grid.html">Blog Grid</a></li>
                                             <li><a href="blog-grid-2.html">Blog list</a></li>
                                             <li><a href="blog-details.html">Blog Details</a></li>
                                         </ul> -->
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="/contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
         <div class="side-menu-content">
             <div class="side-menu-head">
                 <div class="side-menu-logo">
-                    <a class="dark-img" href="index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
-                    <a class="light-img" href="index.html"><img src="../assets/img/logo/logo-1.png" alt="logo"></a>
+                    <a class="dark-img" href="/index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
+                    <a class="light-img" href="/index.html"><img src="../assets/img/logo/logo-1.png" alt="logo"></a>
                 </div>
                 <button class="mobile-side-menu-close"><i class="fa-regular fa-xmark"></i></button>
             </div>
@@ -164,8 +164,8 @@
         </button>
         <div class="side-menu-content">
             <div class="side-menu-logo">
-                <a class="dark-img" href="index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
-                <a class="light-img" href="index.html"><img src="../assets/img/logo/logo-1.png" alt="logo"></a>
+                <a class="dark-img" href="/index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
+                <a class="light-img" href="/index.html"><img src="../assets/img/logo/logo-1.png" alt="logo"></a>
             </div>
             <div class="side-menu-about">
                 <div class="side-menu-header">
@@ -174,7 +174,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud nisi ut aliquip ex ea commodo
                     consequat.</p>
-                <a href="contact.html" class="rr-primary-btn">Contact Us</a>
+                <a href="/contact.html" class="rr-primary-btn">Contact Us</a>
             </div>
             <div class="side-menu-contact">
                 <div class="side-menu-header">
@@ -196,8 +196,8 @@
             <ul class="side-menu-social">
                 <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li class="Youtube"><a href="#"><i class="fab fa-fab fa-google-plus"></i></a></li>
+                <li class="LinkedIn"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="Youtube"><a href="#"><i class="fa-brands fa-youtube"></i></i></a></li>
             </ul>
         </div>
     </div>
@@ -218,9 +218,9 @@
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
-                        <h1 class="title">{service.title}</h1>
-                        <h4 class="sub-title"><a class="home" href="index.html">Home </a><a class="home"
-                                href="service.html">Service </a><a class="inner-page" href="service.html">Content
+                        <h1 class="title">B2B Marketing</h1>
+                        <h4 class="sub-title"><a class="home" href="/index.html">Home </a><a class="home"
+                                href="/service.html">Service </a><a class="inner-page" href="/service.html">Content
                                 Management System</a></h4>
                     </div>
                 </div>
@@ -410,7 +410,7 @@
                             <div class="footer-widget">
                                 <div class="widget-header">
                                     <div class="footer-logo">
-                                        <a href="index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
+                                        <a href="/index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
                                     </div>
                                 </div>
                                 <p class="mb-20">Centric aplications productize before front end vortals visualize front
@@ -425,8 +425,8 @@
                                 </div>
                                 <ul class="footer-list">
                                     <li><a href="about.html">About Us</a></li>
-                                    <li><a href="project.html">Our Gallery</a></li>
-                                    <li><a href="service.html">Our Services</a></li>
+                                    <li><a href="/project.html">Our Gallery</a></li>
+                                    <li><a href="/service.html">Our Services</a></li>
                                     <li><a href="team.html">Our Team</a></li>
                                 </ul>
                             </div>
@@ -483,7 +483,7 @@
                                         <a href="#"><i class="fab fa-pinterest"></i></a>
                                     </li>
                                     <li class="LinkedIn">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                     <li class="instagram">
                                         <a href="#"><i class="fab fa-instagram"></i></a>
