--- a/service.html
+++ b/service.html
@@ -198,8 +198,8 @@
             <ul class="side-menu-social">
                 <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li class="Youtube"><a href="#"><i class="fab fa-fab fa-google-plus"></i></a></li>
+                <li class="LinkedIn"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="Youtube"><a href="#"><i class="fa-brands fa-youtube"></i></i></a></li>
             </ul>
         </div>
     </div>
@@ -640,11 +640,9 @@
                             <li class="facebook">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li class="pinterest">
-                                <a href="#"><i class="fab fa-pinterest"></i></a>
-                            </li>
+                           
                             <li class="LinkedIn">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                             </li>
                             <li class="instagram">
                                 <a href="#"><i class="fab fa-instagram"></i></a>
