changes pushed -> images + grid missions updated

--- a/about.html
+++ b/about.html
@@ -279,37 +279,65 @@
             <section class="process-section-2 fade-wrapper">
                 <div class="container">
                     <div class="section-heading text-center">
-                        <span class="bg-text">Studio</span>
+                        <!-- <span class="bg-text">Studio</span> -->
                         <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Work Process</h4>
                         <h2 class="section-title" data-text-animation data-split="word" data-duration="1">Quality
                             Service For Growth <br>Your Branding Identity</h2>
                     </div>
                     <div class="row gy-lg-0 gy-4">
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="process-box fade-top">
                                 <span class="number">01</span>
                                 <h3 class="title">Client Consultation</h3>
                                 <p>Autem vel eum repreh enderit eui in ea velit esse quame nihil molestiae</p>
-                                <a href="about.html" class="read-more">Read More<i
-                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a>
+                                <!-- <!-- <a href="about.html" class="read-more">Read More<i
+                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a> -->
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="process-box fade-top">
                                 <span class="number">02</span>
                                 <h3 class="title">Research and Analysis</h3>
                                 <p>Autem vel eum repreh enderit eui in ea velit esse quame nihil molestiae</p>
-                                <a href="about.html" class="read-more">Read More<i
-                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a>
+                                <!-- <a href="about.html" class="read-more">Read More<i
+                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a> -->
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="process-box fade-top">
                                 <span class="number">03</span>
                                 <h3 class="title">Project Revisions Launch</h3>
                                 <p>Autem vel eum repreh enderit eui in ea velit esse quame nihil molestiae</p>
-                                <a href="about.html" class="read-more">Read More<i
-                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a>
+                                <!-- <a href="about.html" class="read-more">Read More<i
+                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a> -->
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 pb-3">
+                            <div class="process-box fade-top">
+                                <span class="number">04</span>
+                                <h3 class="title">Client Consultation</h3>
+                                <p>Autem vel eum repreh enderit eui in ea velit esse quame nihil molestiae</p>
+                                <!-- <a href="about.html" class="read-more">Read More<i
+                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a> -->
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 pb-3">
+                            <div class="process-box fade-top">
+                                <span class="number">05</span>
+                                <h3 class="title">Client Consultation</h3>
+                                <p>Autem vel eum repreh enderit eui in ea velit esse quame nihil molestiae</p>
+                                <!-- <a href="about.html" class="read-more">Read More<i
+                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a> -->
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 pb-3">
+                            <div class="process-box fade-top">
+                                <span class="number">06</span>
+                                <h3 class="title">Client Consultation</h3>
+                                <p>Autem vel eum repreh enderit eui in ea velit esse quame nihil molestiae</p>
+                                <!-- <a href="about.html" class="read-more">Read More<i
+                                        class="fa-sharp fa-regular fa-chevrons-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -435,7 +463,7 @@
             </section>
             <!-- ./ about-section -->
 
-            <section class="team-section fade-wrapper">
+            <!-- <section class="team-section fade-wrapper">
                 <div class="container">
                     <div class="section-heading text-center">
                         <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Team Members</h4>
@@ -549,10 +577,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- ./ team-section -->
 
-            <section class="testimonial-section pt-130 pb-130 fade-wrapper">
+            <!-- <section class="testimonial-section pt-130 pb-130 fade-wrapper">
                 <div class="container">
                     <div class="section-heading heading-3 text-center">
                         <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Testimonials</h4>
@@ -560,7 +588,7 @@
                             feedback</h2>
                     </div>
                     <div class="row gy-lg-0 gy-4 testi-wrap justify-content-center">
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="testi-item item-3 text-center fade-top">
                                 <div class="testi-thumb">
                                     <img src="assets/img/testi/testi-author-1.png" alt="img">
@@ -572,7 +600,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="testi-item item-3 text-center fade-top">
                                 <div class="testi-thumb">
                                     <img src="assets/img/testi/testi-author-3.png" alt="img">
@@ -584,7 +612,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="testi-item item-3 mb-0 text-center fade-top">
                                 <div class="testi-thumb">
                                     <img src="assets/img/testi/testi-author-2.png" alt="img">
@@ -598,7 +626,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- ./ testimonial-section -->
 
             <footer class="footer-section footer-2 bg-dark-1">
@@ -621,7 +649,7 @@
                         </ul>
                     </div>
                     <div class="row footer-wrap">
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="footer-widget">
                                 <!-- <div class="widget-header">
                                     <h3 class="widget-title">Company</h3>
@@ -634,7 +662,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="footer-widget">
                                 <!-- <div class="widget-header">
                                     <h3 class="widget-title">Working Time</h3>
@@ -646,7 +674,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 pb-3">
                             <div class="footer-widget">
                                 <div class="widget-header">
                                     <h3 class="widget-title">Contact Us</h3>
