--- a/index.html
+++ b/index.html
@@ -70,10 +70,20 @@
                                 </li>
                                 <li class="">
                                     <a href="service.html">Services</a>
-                                    <!-- <ul>
-                                            <li><a href="service.html">Service</a></li>
-                                            <li><a href="service-details.html">Service Details</a></li>
-                                        </ul> -->
+                                    <ul>
+                                        <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
+                                        <li><a href="/details/btl_marketing.html">BTL Marketing</a></li>
+                                        <li><a href="/details/ttl_marketing.html">TTL Marketing</a></li>
+                                        <li><a href="/details/b2b_marketing.html">B2B Marketing</a></li>
+                                        <li><a href="/details/pos_marketing.html">POS Marketing</a></li>
+                                        <li><a href="/details/exhibition.html">Exhibition</a></li>
+                                        <li><a href="/details/pr_and_media.html">PR & Media</a></li>
+                                        <li><a href="/details/brand_marketing.html">Brand Marketing</a></li>
+                                        <li><a href="/details/entertainment_marketing.html">Entertainment Marketing</a>
+                                        </li>
+                                        <li><a href="/details/merchandise_marketing.html">Merchandise Marketing</a></li>
+                                        <li><a href="/details/corporate_events.html">Corporate Events</a></li>
+                                        </ul>
                                 </li>
                                 <!-- <li class="menu-item-has-children">
                                         <a href="shop.html">Shop</a>
@@ -1777,7 +1787,7 @@
                                             and the future.
                                         </p>
                                         <div class="about-btn fade-top">
-                                            <a href="about.html" class="rr-primary-btn">Let’s Build Something Bold<i
+                                            <a href="/about.html" class="rr-primary-btn">More About Us<i
                                                     class="fa-sharp fa-regular fa-arrow-right"></i></a>
                                         </div>
                                     </div>
@@ -1911,12 +1921,13 @@
                     <div class="cta-wrap text-center">
                         <div class="section-heading text-center">
                             <span class="bg-text">Get Started</span>
-                            <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Got a project in mind?</h4>
+                            <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Got a project in
+                                mind?</h4>
                             <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                 data-duration="0.6" data-stagger="0.03">Let’s bring your <br> vision to life!</h2>
                         </div>
                         <div class="cta-thumb-wrap">
-                            <img src="assets/img/images/cta-img.png" alt="cta">
+                            <img src="assets/img/shapes/service-cross.png" alt="cta">
                             <a href="contact.html" class="cta-btn"><i
                                     class="fa-sharp fa-regular fa-arrow-right"></i></a>
                         </div>
