--- a/details/exhibition.html
+++ b/details/exhibition.html
@@ -69,11 +69,21 @@
                                         </ul> -->
                                 </li>
                                 <li class="">
-                                    <a href="/service.html">Services</a>
-                                    <!-- <ul>
-                                            <li><a href="/service.html">Service</a></li>
-                                            <li><a href="service-details.html">Service Details</a></li>
-                                        </ul> -->
+                                    <a href="service.html">Services</a>
+                                    <ul>
+                                        <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
+                                        <li><a href="/details/btl_marketing.html">BTL Marketing</a></li>
+                                        <li><a href="/details/ttl_marketing.html">TTL Marketing</a></li>
+                                        <li><a href="/details/b2b_marketing.html">B2B Marketing</a></li>
+                                        <li><a href="/details/pos_marketing.html">POS Marketing</a></li>
+                                        <li><a href="/details/exhibition.html">Exhibition</a></li>
+                                        <li><a href="/details/pr_and_media.html">PR & Media</a></li>
+                                        <li><a href="/details/brand_marketing.html">Brand Marketing</a></li>
+                                        <li><a href="/details/entertainment_marketing.html">Entertainment Marketing</a>
+                                        </li>
+                                        <li><a href="/details/merchandise_marketing.html">Merchandise Marketing</a></li>
+                                        <li><a href="/details/corporate_events.html">Corporate Events</a></li>
+                                        </ul>
                                 </li>
                                 <!-- <li class="menu-item-has-children">
                                         <a href="shop.html">Shop</a>
