--- a/details/corporate_events.html
+++ b/details/corporate_events.html
@@ -203,11 +203,11 @@
                     </li>
                 </ul>
             </div>
-            <ul class="side-menu-social">
-                <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li class="Youtube"><a href="#"><i class="fa-brands fa-youtube"></i></i></a></li>
+            <ul class="side-menu-social ">
+                <li class="facebook"><a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="instagram"><a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a></li>
+                <li class="LinkedIn"><a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="Youtube"><a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></i></a></li>
             </ul>
         </div>
     </div>
