footer final update

--- a/details/atl_marketing.html
+++ b/details/atl_marketing.html
@@ -83,7 +83,7 @@
                                         </li>
                                         <li><a href="/details/merchandise_marketing.html">Merchandise Marketing</a></li>
                                         <li><a href="/details/corporate_events.html">Corporate Events</a></li>
-                                        </ul>
+                                    </ul>
                                 </li>
                                 <!-- <li class="menu-item-has-children">
                                         <a href="shop.html">Shop</a>
@@ -204,10 +204,15 @@
                 </ul>
             </div>
             <ul class="side-menu-social ">
-                <li class="facebook"><a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="instagram"><a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a></li>
-                <li class="LinkedIn"><a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li class="Youtube"><a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></i></a></li>
+                <li class="facebook"><a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="instagram"><a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i
+                            class="fab fa-instagram"></i></a></li>
+                <li class="LinkedIn"><a
+                        href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i
+                            class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="Youtube"><a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i
+                            class="fa-brands fa-youtube"></i></i></a></li>
             </ul>
         </div>
     </div>
@@ -222,9 +227,12 @@
             <section class="page-header" data-background="../assets/img/bg-img/page-header-bg.jpg">
                 <div class="overlay"></div>
                 <div class="shapes">
-                    <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
-                    <div class="shape shape-2"><img src="../assets/img/shapes/page-header-shape-2.png" alt="shape"></div>
-                    <div class="shape shape-3"><img src="../assets/img/shapes/page-header-shape-3.png" alt="shape"></div>
+                    <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape">
+                    </div>
+                    <div class="shape shape-2"><img src="../assets/img/shapes/page-header-shape-2.png" alt="shape">
+                    </div>
+                    <div class="shape shape-3"><img src="../assets/img/shapes/page-header-shape-3.png" alt="shape">
+                    </div>
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
@@ -377,8 +385,8 @@
                                             <div class="icon">
                                                 <img class="dark-img" src="../assets/img/icon/download-icon-1.png"
                                                     alt="icon">
-                                                <img class="light-img" src="../assets/img/icon/download-icon-1-light.png"
-                                                    alt="icon">
+                                                <img class="light-img"
+                                                    src="../assets/img/icon/download-icon-1-light.png" alt="icon">
                                             </div>
                                             <div class="content">
                                                 <h3 class="title">Our Brochures</h3>
@@ -393,8 +401,8 @@
                                             <div class="icon">
                                                 <img class="dark-img" src="../assets/img/icon/download-icon-2.png"
                                                     alt="icon">
-                                                <img class="light-img" src="../assets/img/icon/download-icon-2-light.png"
-                                                    alt="icon">
+                                                <img class="light-img"
+                                                    src="../assets/img/icon/download-icon-2-light.png" alt="icon">
                                             </div>
                                             <div class="content">
                                                 <h3 class="title">Company Details</h3>
@@ -449,7 +457,7 @@
                                 <ul class="address-list">
                                     <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
                                     <li><a href="tel:+2585492153215">+91 8048534240</a></li>
-                                    <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br> Berlin, Germany</li>
+                                    <li>Routetomarket Media India Pvt Ltd. <br>Basvangudi Bangalore - 560004</li>
                                 </ul>
                             </div>
                         </div>
@@ -482,21 +490,21 @@
                     <div class="container">
                         <div class="row copyright-content">
                             <div class="col-md-6">
-                                <p>© 2024 Runok. All Rights Reserved.</p>
+                                <p>© 2024 R2MI. All Rights Reserved.</p>
                             </div>
                             <div class="col-md-6">
                                 <ul class="social-list">
                                     <li class="facebook">
-                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="pinterest">
-                                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                                    <li class="Youtube">
+                                        <a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></a>
                                     </li>
                                     <li class="LinkedIn">
-                                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                     <li class="instagram">
-                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                        <a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a>
                                     </li>
                                 </ul>
                             </div>
