--- a/details/pos_marketing.html
+++ b/details/pos_marketing.html
@@ -449,7 +449,7 @@
                                 <ul class="address-list">
                                     <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
                                     <li><a href="tel:+2585492153215">+91 8048534240</a></li>
-                                    <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br> Berlin, Germany</li>
+                                    <li>Routetomarket Media India Pvt Ltd. <br>Basvangudi Bangalore - 560004</li>
                                 </ul>
                             </div>
                         </div>
@@ -482,21 +482,21 @@
                     <div class="container">
                         <div class="row copyright-content">
                             <div class="col-md-6">
-                                <p>© 2024 Runok. All Rights Reserved.</p>
+                                <p>© 2024 R2MI. All Rights Reserved.</p>
                             </div>
                             <div class="col-md-6">
                                 <ul class="social-list">
                                     <li class="facebook">
-                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="pinterest">
-                                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                                    <li class="Youtube">
+                                        <a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></a>
                                     </li>
                                     <li class="LinkedIn">
-                                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                     <li class="instagram">
-                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                        <a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a>
                                     </li>
                                 </ul>
                             </div>
